--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/dialog/dialog.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/dialog/dialog.html
@@ -1,12 +1,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <template th:replace="/base.html"></template>
-
-<script type="text/javascript" th:insert="sys/dialog/dialogScript.js"></script>
 </head>
 <body>
 	<form id="popWinForm" method="post">
 		
 	</form>
+	<script type="text/javascript" th:include="sys/dialog/dialogScript.js"></script>
 </body>
 </html>
