--- a/01SOURCE/vue/vuell/src/templates/testTable.html
+++ b/01SOURCE/vue/vuell/src/templates/testTable.html
@@ -10,19 +10,23 @@
 
 <body>
   <div id="app" style="height: 100%;width: 100%;">
-    <ll-grid :data="tableData" :data-wrap="dataWrap" @current-change="currentChange">
+    <ll-grid :data="tableData" :data-wrap="dataWrap" @current-change="currentChange" @cell-click="testCellClick">
       <ll-grid-column prop="date" label="日期" :width="180" :readonly="true">
       </ll-grid-column>
       <ll-grid-column prop="name" label="姓名" :width="180">
       </ll-grid-column>
       <ll-grid-column prop="address" label="地址" :width="180">
       </ll-grid-column>
-      <ll-grid-column  :sortable="false" label="地址" 
+      <ll-grid-column  :sortable="false" label="地址" :istemplate="true"
        :width="180">
-      <template slot="content" slot-scope="scope">
-          <span v-if="!(scope.row.editFlag==null?false:scope.row.editFlag)"  @click="handleEdit(scope.row)">{{ scope.row.name+"1" }}</span>
-          <span v-if="(scope.row.editFlag==null?false:scope.row.editFlag)" class="cell-edit-input"><ll-input ref="llHiddenInput"  v-model="scope.row.name" placeholder="请输入内容" @blur="handleSave(scope.row)"></ll-input></span>
-      </template>
+        <template slot-scope="scope"   >
+            
+        </template>
+        <template slot="header" slot-scope="scope">
+            <ll-input 
+              size="mini"
+              placeholder="输入关键字搜索"/>
+          </template>
     </ll-grid-column>
       
     </ll-grid>
@@ -38,22 +42,26 @@
         dataList:[{
           date: "2016-05-02",
           name: "王小虎1",
-          address: "上海市普陀区金沙江路 1518 弄"
+          address: "上海市普陀区金沙江路 1518 弄",
+          editFlag:false
           },
           {
             date: "2016-05-01",
             name: "王小虎",
-            address: "上海市普陀区金沙江路 1519 弄"
+            address: "上海市普陀区金沙江路 1519 弄",
+          editFlag:true
           },
           {
             date: "2016-05-03",
             name: "王小虎",
-            address: "上海市普陀区金沙江路 1516 弄"
+            address: "上海市普陀区金沙江路 1516 弄",
+          editFlag:true
           },
           {
             date: "2016-05-04",
             name: "王小虎",
-            address: "上海市普陀区金沙江路 1517 弄"
+            address: "上海市普陀区金沙江路 1517 弄",
+          editFlag:true
           },
         ],
         pageInfo:{
@@ -64,22 +72,26 @@
       tableData: [{
           date: "2016-05-02",
           name: "王小虎1",
-          address: "上海市普陀区金沙江路 1518 弄"
+          address: "上海市普陀区金沙江路 1518 弄",
+          editFlag:true
         },
         {
           date: "2016-05-01",
           name: "王小虎",
-          address: "上海市普陀区金沙江路 1519 弄"
+          address: "上海市普陀区金沙江路 1519 弄",
+          editFlag:true
         },
         {
           date: "2016-05-03",
           name: "王小虎",
-          address: "上海市普陀区金沙江路 1516 弄"
+          address: "上海市普陀区金沙江路 1516 弄",
+          editFlag:true
         },
         {
           date: "2016-05-04",
           name: "王小虎",
-          address: "上海市普陀区金沙江路 1517 弄"
+          address: "上海市普陀区金沙江路 1517 弄",
+          editFlag:true
         },
       ],
     },
@@ -98,6 +110,9 @@
         console.log(row)
         this.$set(row, "editFlag", false);
       },
+      testCellClick(){
+        // alert("testCellClick")
+      }
     }
   })
 </script>
